# tinq-python

./: .gitignore  LICENSE.txt  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
.openapi-generator/: FILES
docs/: Assistant.md  Classifiers.md  PlagiarismChecker.md  Projects.md  Scraper.md  Tools.md  Workflows.md
tinq/: __init__.py  api_client.py  configuration.py  exceptions.py  playground.py  projects.py  rest.py  settings.py
tinq/api/: __init__.py  assistant.py  classifiers.py  plagiarism_checker.py  projects.py  scraper.py  tools.py  workflows.py
tinq/models/: __init__.py
